--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive": "^9.0.2"
+    "react-responsive": "^9.0.2",
+    "react-toastify": "^9.1.3"
   },
   "description": "Web adaptation of the monopoly board game",
   "devDependencies": {
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "css-loader": "^6.8.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.2",
     "webpack": "^5.89.0",
