Add cross project dev scripts

--- a/projects/@webopoly/core/package.json
+++ b/projects/@webopoly/core/package.json
@@ -10,6 +10,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "npm run clean && tsc --project tsconfig.json",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "watch": "tsc --project tsconfig.json --watch"
   }
 }
