--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@types/react-modal": "^3.16.3",
+    "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
@@ -31,7 +32,8 @@
     "url": "git+https://github.com/capelski/webopoly.git"
   },
   "scripts": {
-    "clean-modules": "rm -rf node_modules"
+    "clean-modules": "rm -rf node_modules",
+    "dev": "concurrently 'npm run watch -w @webopoly/core' 'npm run dev -w @webopoly/client'"
   },
   "version": "1.0.0",
   "workspaces": [
