Tweak typescript compilation

--- a/projects/@webopoly/client/package.json
+++ b/projects/@webopoly/client/package.json
@@ -24,9 +24,11 @@
   },
   "license": "ISC",
   "name": "@webopoly/client",
+  "private": true,
   "scripts": {
     "build": "npm run clean && webpack --config webpack/production.config.js",
     "clean": "rm -rf dist",
+    "compile": "tsc --project tsconfig.json",
     "dev": "webpack serve --config webpack/development.config.js"
   },
   "version": "1.0.0"
