--- a/package.json
+++ b/package.json
@@ -1,28 +1,9 @@
 {
   "author": "Carles Capellas <capellas.carles@gmail.com>",
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
-    "react-responsive": "^9.0.2",
-    "react-toastify": "^10.0.4"
-  },
   "description": "Web adaptation of the monopoly board game",
   "devDependencies": {
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "@types/react-modal": "^3.16.3",
     "concurrently": "^8.2.2",
-    "css-loader": "^6.8.1",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.3.3",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0"
+    "typescript": "^5.3.3"
   },
   "license": "ISC",
   "name": "webopoly",
@@ -33,14 +14,13 @@
   },
   "scripts": {
     "build": "npm run clean && npm run build:all && cp -r projects/@webopoly/client/dist docs",
-    "build:all": "npm run build -w @webopoly/core && npm run build -w @webopoly/client",
+    "build:all": "npm run build -w @webopoly/client",
     "clean": "rm -rf docs",
     "clean-modules": "rm -rf node_modules",
-    "dev": "concurrently 'npm run watch -w @webopoly/core' 'npm run dev -w @webopoly/client'"
+    "dev": "concurrently 'npm run dev -w @webopoly/client'"
   },
   "version": "1.0.0",
   "workspaces": [
-    "projects/@webopoly/core",
     "projects/@webopoly/client"
   ]
 }
