--- a/projects/@webopoly/client/tsconfig.json
+++ b/projects/@webopoly/client/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "react",
-    "lib": ["dom", "es2017"]
+    "lib": ["dom", "es2017"],
+    "outDir": "./compiler-output",
+    "rootDir": ".."
   },
   "include": ["source/**/*"]
 }
