--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "url": "git+https://github.com/capelski/webopoly.git"
   },
   "scripts": {
-    "build": "npm run clean && npm run build:all && cp -r projects/@webopoly/client/dist docs",
-    "build:all": "npm run build -w @webopoly/client",
-    "clean": "rm -rf docs",
+    "assets": "npm run assets:server && npm run assets:docs",
+    "assets:docs": "export BUILD_GITHUB_PAGES=true && npm run build -w @webopoly/client",
+    "assets:server": "cp -r projects/@webopoly/client/dist projects/@webopoly/server/public",
+    "build": "npm run clean-assets && npm run build:all && npm run assets",
+    "build:all": "npm run build -w @webopoly/client && npm run build -w @webopoly/server",
+    "clean": "npm run clean -ws && npm run clean-assets",
+    "clean-assets": "npm run clean:assets -w @webopoly/server && rm -rf docs",
     "clean-modules": "rm -rf node_modules",
-    "dev": "concurrently 'npm run dev -w @webopoly/client'"
+    "dev": "concurrently 'npm run dev -w @webopoly/client' 'npm run dev -w @webopoly/server'"
   },
   "version": "1.0.0",
   "workspaces": [
-    "projects/@webopoly/client"
+    "projects/@webopoly/client",
+    "projects/@webopoly/server"
   ]
 }
