--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "version": "1.0.0",
   "workspaces": [
     "projects/@webopoly/client",
+    "projects/@webopoly/core",
     "projects/@webopoly/server"
   ]
 }
