--- a/projects/@webopoly/server/package.json
+++ b/projects/@webopoly/server/package.json
@@ -5,6 +5,8 @@
     "@nestjs/core": "^10.3.3",
     "@nestjs/platform-express": "^10.3.3",
     "@nestjs/serve-static": "^4.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "nanoid": "^3.3.7",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
