--- a/projects/@webopoly/client/package.json
+++ b/projects/@webopoly/client/package.json
@@ -5,7 +5,8 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-responsive": "^9.0.2",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.61",
