--- a/projects/@webopoly/server/package.json
+++ b/projects/@webopoly/server/package.json
@@ -4,9 +4,9 @@
     "@nestjs/common": "^10.3.3",
     "@nestjs/core": "^10.3.3",
     "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/platform-socket.io": "^10.3.3",
     "@nestjs/serve-static": "^4.0.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "@nestjs/websockets": "^10.3.3",
     "nanoid": "^3.3.7",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
@@ -16,6 +16,7 @@
     "@nestjs/schematics": "^10.1.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
+    "@types/socket.io": "^3.0.2",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
