Add docker push package.json script

--- a/projects/@webopoly/server/package.json
+++ b/projects/@webopoly/server/package.json
@@ -34,6 +34,7 @@
     "dev": "nest start --watch",
     "docker-build": "./docker-build.sh",
     "docker-run": "docker run -p 3000:3000 l3bowski/webopoly",
+    "docker-push": "docker push l3bowski/webopoly",
     "nest": "nest",
     "start": "node dist/server/source/main.js"
   }
