--- a/projects/@webopoly/client/package.json
+++ b/projects/@webopoly/client/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Carles Capellas <capellas.carles@gmail.com>",
   "dependencies": {
+    "@easy-rtc/react": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
