--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "build:all": "npm run build -w @webopoly/core && npm run build -w @webopoly/client && npm run build -w @webopoly/server",
     "clean": "npm run clean -ws && npm run clean-assets",
     "clean-assets": "npm run clean:assets -w @webopoly/server && rm -rf docs",
-    "clean-modules": "rm -rf node_modules",
-    "dev": "concurrently 'npm run dev -w @webopoly/core' && npm run dev -w @webopoly/client' 'npm run dev -w @webopoly/server'"
+    "clean-modules": "npm run clean-modules -ws --if-present && rm -rf node_modules",
+    "dev": "concurrently --kill-others 'npm run dev -w @webopoly/core' 'sleep 5; npm run dev -w @webopoly/client' 'sleep 5; npm run dev -w @webopoly/server'"
   },
   "version": "1.0.0",
   "workspaces": [
