Fix VSCode source code navigation

--- a/projects/@webopoly/client/tsconfig.json
+++ b/projects/@webopoly/client/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.server.json",
+  "extends": "./tsconfig.client.json",
   "compilerOptions": {
     "paths": {
       "@webopoly/core": ["../core/source"]
